--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                 </div>
             </div> <!-- arrow --> </div>
     </div>
-    <div id="rec812146346" class="r t-rec t-rec_pt_180 t-rec_pb_180" style="padding-top:180px;padding-bottom:180px;width:100% "
+    <div id="rec812146346" class="r t-rec t-rec_pt_180 t-rec_pb_180" style="padding-top:180px;padding-bottom:180px;width:100%;"
          data-record-type="486"> <!-- T486 -->
         <div class="t486" id="about">
             <div class="t-container">
