--- a/index.html
+++ b/index.html
@@ -589,10 +589,10 @@
                 </div>
             </div> <!-- arrow --> </div>
     </div>
-    <div id="rec812146346" class="r t-rec t-rec_pt_180 t-rec_pb_180"
+    <div id="rec812146346" class="r t-rec"
          data-record-type="486"> <!-- T486 -->
         <div class="t486" id="about">
-            <div class="t-container">
+            <div class="t-container fl-rev">
                 <div class="t486__top t-col t-col_6 ">
                     <div class="t486__textwrapper t-align_left">
                         <div class="t486__content t-valign_middle">
