--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-48x48.png">
     <link rel="manifest" href="favicon/site.webmanifest"> <!-- Assets -->
+    <link rel="preload" href="css/tilda-blocks-page56573565.min.css" as="style">
+    <link rel="preload" href="css/fonts-tildasans.css" as="style">
     <script src="https://neo.tildacdn.com/js/tilda-fallback-1.0.min.js" async charset="utf-8"></script>
     <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';"/>
     <link rel="stylesheet" href="css/tilda-blocks-page56573565.min.css?t=1729255291" type="text/css" media="all"
@@ -589,10 +591,10 @@
                 </div>
             </div> <!-- arrow --> </div>
     </div>
-    <div id="rec812146346" class="r t-rec"
+    <div id="rec812146346" class="r t-rec t-rec_pt_180 t-rec_pb_180" style="padding-top:180px;padding-bottom:180px;width:100%;"
          data-record-type="486"> <!-- T486 -->
         <div class="t486" id="about">
-            <div class="t-container fl-rev">
+            <div class="t-container">
                 <div class="t486__top t-col t-col_6 ">
                     <div class="t486__textwrapper t-align_left">
                         <div class="t486__content t-valign_middle">
