--- a/index.html
+++ b/index.html
@@ -612,48 +612,48 @@
                         </div>
                     </div>
                 </div>
-                <div class="t-col t-col_5 ">
-                    <div class="t486__imgcontainer">
-                        <div class="t486__row">
-                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
-                                <meta itemprop="image"
-                                      content="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg">
-                                <div class="t486__blockimg t-bgimg"
-                                     data-original="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg"
-                                     bgimgfield="img"
-                                     style="background-image:url('images/tild3562-6564-4461-b937-623863656135__-__resizeb__20x__designer_3.jpeg');"></div>
-                                <div class="t486__separator"></div>
-                            </div>
-                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
-                                <meta itemprop="image" content="images/tild3735-6261-4730-b963-303435666365___18.png">
-                                <div class="t486__blockimg t-bgimg"
-                                     data-original="images/tild3735-6261-4730-b963-303435666365___18.png"
-                                     bgimgfield="img2"
-                                     style="background-image:url('images/tild3735-6261-4730-b963-303435666365__-__resizeb__20x___18.png');"></div>
-                                <div class="t486__separator"></div>
-                            </div>
-                        </div>
-                        <div class="t486__row t486__row_last">
-                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
-                                <meta itemprop="image" content="images/tild3630-3734-4461-a165-646566393966___18.png">
-                                <div class="t486__blockimg t-bgimg"
-                                     data-original="images/tild3630-3734-4461-a165-646566393966___18.png"
-                                     bgimgfield="img3"
-                                     style="background-image:url('images/tild3630-3734-4461-a165-646566393966__-__resizeb__20x___18.png');"></div>
-                                <div class="t486__separator"></div>
-                            </div>
-                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
-                                <meta itemprop="image"
-                                      content="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg">
-                                <div class="t486__blockimg t-bgimg"
-                                     data-original="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg"
-                                     bgimgfield="img4"
-                                     style="background-image:url('images/tild3437-6230-4334-b730-333830623136__-__resizeb__20x__designer_4.jpeg');"></div>
-                                <div class="t486__separator"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="t-col t-col_5 ">-->
+<!--                    <div class="t486__imgcontainer">-->
+<!--                        <div class="t486__row">-->
+<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
+<!--                                <meta itemprop="image"-->
+<!--                                      content="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg">-->
+<!--                                <div class="t486__blockimg t-bgimg"-->
+<!--                                     data-original="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg"-->
+<!--                                     bgimgfield="img"-->
+<!--                                     style="background-image:url('images/tild3562-6564-4461-b937-623863656135__-__resizeb__20x__designer_3.jpeg');"></div>-->
+<!--                                <div class="t486__separator"></div>-->
+<!--                            </div>-->
+<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
+<!--                                <meta itemprop="image" content="images/tild3735-6261-4730-b963-303435666365___18.png">-->
+<!--                                <div class="t486__blockimg t-bgimg"-->
+<!--                                     data-original="images/tild3735-6261-4730-b963-303435666365___18.png"-->
+<!--                                     bgimgfield="img2"-->
+<!--                                     style="background-image:url('images/tild3735-6261-4730-b963-303435666365__-__resizeb__20x___18.png');"></div>-->
+<!--                                <div class="t486__separator"></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="t486__row t486__row_last">-->
+<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
+<!--                                <meta itemprop="image" content="images/tild3630-3734-4461-a165-646566393966___18.png">-->
+<!--                                <div class="t486__blockimg t-bgimg"-->
+<!--                                     data-original="images/tild3630-3734-4461-a165-646566393966___18.png"-->
+<!--                                     bgimgfield="img3"-->
+<!--                                     style="background-image:url('images/tild3630-3734-4461-a165-646566393966__-__resizeb__20x___18.png');"></div>-->
+<!--                                <div class="t486__separator"></div>-->
+<!--                            </div>-->
+<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
+<!--                                <meta itemprop="image"-->
+<!--                                      content="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg">-->
+<!--                                <div class="t486__blockimg t-bgimg"-->
+<!--                                     data-original="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg"-->
+<!--                                     bgimgfield="img4"-->
+<!--                                     style="background-image:url('images/tild3437-6230-4334-b730-333830623136__-__resizeb__20x__designer_4.jpeg');"></div>-->
+<!--                                <div class="t486__separator"></div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
         <script>t_onReady(function () {
