--- a/index.html
+++ b/index.html
@@ -595,65 +595,65 @@
          data-record-type="486"> <!-- T486 -->
         <div class="t486" id="about">
             <div class="t-container">
-                <div class="t486__top t-col t-col_6 ">
-                    <div class="t486__textwrapper t-align_left">
-                        <div class="t486__content t-valign_middle">
-                            <div class="t486__box">
-                                <div class="t486__title t-title t-title_xs " field="title">Pin-Up ile Spor Heyecanını
-                                    Keşfet!
-                                </div>
-                                <div class="t486__descr t-descr t-descr_md " field="descr">Volleyball Quest, spor
-                                    severlere sunduğu heyecan verici deneyim ile tüm dikkatleri üzerine çekiyor. Pin-up
-                                    temasını spor dünyasıyla buluşturan bu benzersiz oyun, oyunculara hem eğlenceli hem
-                                    de zorlu bir macera sunuyor. Hem amatörler hem de profesyoneller için uygun olan
-                                    Volleyball Quest, rekabetçi yapısı ile spor severleri kendine çekiyor.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-<!--                <div class="t-col t-col_5 ">-->
-<!--                    <div class="t486__imgcontainer">-->
-<!--                        <div class="t486__row">-->
-<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
-<!--                                <meta itemprop="image"-->
-<!--                                      content="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg">-->
-<!--                                <div class="t486__blockimg t-bgimg"-->
-<!--                                     data-original="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg"-->
-<!--                                     bgimgfield="img"-->
-<!--                                     style="background-image:url('images/tild3562-6564-4461-b937-623863656135__-__resizeb__20x__designer_3.jpeg');"></div>-->
-<!--                                <div class="t486__separator"></div>-->
-<!--                            </div>-->
-<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
-<!--                                <meta itemprop="image" content="images/tild3735-6261-4730-b963-303435666365___18.png">-->
-<!--                                <div class="t486__blockimg t-bgimg"-->
-<!--                                     data-original="images/tild3735-6261-4730-b963-303435666365___18.png"-->
-<!--                                     bgimgfield="img2"-->
-<!--                                     style="background-image:url('images/tild3735-6261-4730-b963-303435666365__-__resizeb__20x___18.png');"></div>-->
-<!--                                <div class="t486__separator"></div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="t486__row t486__row_last">-->
-<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
-<!--                                <meta itemprop="image" content="images/tild3630-3734-4461-a165-646566393966___18.png">-->
-<!--                                <div class="t486__blockimg t-bgimg"-->
-<!--                                     data-original="images/tild3630-3734-4461-a165-646566393966___18.png"-->
-<!--                                     bgimgfield="img3"-->
-<!--                                     style="background-image:url('images/tild3630-3734-4461-a165-646566393966__-__resizeb__20x___18.png');"></div>-->
-<!--                                <div class="t486__separator"></div>-->
-<!--                            </div>-->
-<!--                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">-->
-<!--                                <meta itemprop="image"-->
-<!--                                      content="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg">-->
-<!--                                <div class="t486__blockimg t-bgimg"-->
-<!--                                     data-original="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg"-->
-<!--                                     bgimgfield="img4"-->
-<!--                                     style="background-image:url('images/tild3437-6230-4334-b730-333830623136__-__resizeb__20x__designer_4.jpeg');"></div>-->
-<!--                                <div class="t486__separator"></div>-->
+<!--                <div class="t486__top t-col t-col_6 ">-->
+<!--                    <div class="t486__textwrapper t-align_left">-->
+<!--                        <div class="t486__content t-valign_middle">-->
+<!--                            <div class="t486__box">-->
+<!--                                <div class="t486__title t-title t-title_xs " field="title">Pin-Up ile Spor Heyecanını-->
+<!--                                    Keşfet!-->
+<!--                                </div>-->
+<!--                                <div class="t486__descr t-descr t-descr_md " field="descr">Volleyball Quest, spor-->
+<!--                                    severlere sunduğu heyecan verici deneyim ile tüm dikkatleri üzerine çekiyor. Pin-up-->
+<!--                                    temasını spor dünyasıyla buluşturan bu benzersiz oyun, oyunculara hem eğlenceli hem-->
+<!--                                    de zorlu bir macera sunuyor. Hem amatörler hem de profesyoneller için uygun olan-->
+<!--                                    Volleyball Quest, rekabetçi yapısı ile spor severleri kendine çekiyor.-->
+<!--                                </div>-->
 <!--                            </div>-->
 <!--                        </div>-->
 <!--                    </div>-->
 <!--                </div>-->
+                <div class="t-col t-col_5 ">
+                    <div class="t486__imgcontainer">
+                        <div class="t486__row">
+                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
+                                <meta itemprop="image"
+                                      content="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg">
+                                <div class="t486__blockimg t-bgimg"
+                                     data-original="images/tild3562-6564-4461-b937-623863656135__designer_3.jpeg"
+                                     bgimgfield="img"
+                                     style="background-image:url('images/tild3562-6564-4461-b937-623863656135__-__resizeb__20x__designer_3.jpeg');"></div>
+                                <div class="t486__separator"></div>
+                            </div>
+                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
+                                <meta itemprop="image" content="images/tild3735-6261-4730-b963-303435666365___18.png">
+                                <div class="t486__blockimg t-bgimg"
+                                     data-original="images/tild3735-6261-4730-b963-303435666365___18.png"
+                                     bgimgfield="img2"
+                                     style="background-image:url('images/tild3735-6261-4730-b963-303435666365__-__resizeb__20x___18.png');"></div>
+                                <div class="t486__separator"></div>
+                            </div>
+                        </div>
+                        <div class="t486__row t486__row_last">
+                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
+                                <meta itemprop="image" content="images/tild3630-3734-4461-a165-646566393966___18.png">
+                                <div class="t486__blockimg t-bgimg"
+                                     data-original="images/tild3630-3734-4461-a165-646566393966___18.png"
+                                     bgimgfield="img3"
+                                     style="background-image:url('images/tild3630-3734-4461-a165-646566393966__-__resizeb__20x___18.png');"></div>
+                                <div class="t486__separator"></div>
+                            </div>
+                            <div class="t486__imgwrapper" itemscope itemtype="http://schema.org/ImageObject">
+                                <meta itemprop="image"
+                                      content="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg">
+                                <div class="t486__blockimg t-bgimg"
+                                     data-original="images/tild3437-6230-4334-b730-333830623136__designer_4.jpeg"
+                                     bgimgfield="img4"
+                                     style="background-image:url('images/tild3437-6230-4334-b730-333830623136__-__resizeb__20x__designer_4.jpeg');"></div>
+                                <div class="t486__separator"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <script>t_onReady(function () {
