--- a/index.html
+++ b/index.html
@@ -533,64 +533,64 @@
           color: #ffffff;
         }</style>
     </div>
-<!--    <div id="rec812146345" class="r t-rec" style="background-color:#da5e5e; " data-animationappear="off"-->
-<!--         data-record-type="205" data-bg-color="#da5e5e"> &lt;!&ndash; cover &ndash;&gt;-->
-<!--        <div class="t-cover" id="recorddiv812146345" bgimgfield="img" style="height:30vh;background-color: #da5e5e;">-->
-<!--            <div class="t-cover__carrier" id="coverCarry812146345" data-content-cover-id="812146345"-->
-<!--                 data-content-cover-bg="" data-display-changed="true" data-content-cover-height="30vh"-->
-<!--                 data-content-cover-parallax="" data-content-use-image-for-mobile-cover=""-->
-<!--                 style="height:30vh;background-attachment:scroll; " itemscope itemtype="http://schema.org/ImageObject">-->
-<!--                <meta itemprop="image" content="">-->
-<!--            </div>-->
-<!--            <div class="t-cover__filter" style="height:30vh;background-color: unset;opacity: 0.4;"></div>-->
-<!--            <div class="t-container">-->
-<!--                <div class="t-width t-width_10" style="margin:0 auto;">-->
-<!--                    <div class="t-cover__wrapper t-valign_middle" style="height:30vh; position: relative;z-index:1;">-->
-<!--                        <div class="t182">-->
-<!--                            <div data-hook-content="covercontent">-->
-<!--                                <div class="t182__wrapper">-->
-<!--                                    <div class="t182__title t-title t-title_xl t-animate" data-animate-style="fadeinup"-->
-<!--                                         data-animate-group="yes" field="title">Volleyball Quest - En İyi <br/>Pin-Up-->
-<!--                                        Deneyimi-->
-<!--                                    </div>-->
-<!--                                    <div class="t182__descr t-descr t-descr_lg t-animate" data-animate-style="fadeinup"-->
-<!--                                         data-animate-group="yes" field="descr">Pin-up tarzında yeni bir spor macerasına-->
-<!--                                        adım at! Volleyball Quest ile eğlenceli, heyecan verici ve rekabet dolu bir-->
-<!--                                        deneyim seni bekliyor. Takımını kur, becerilerini geliştir ve zirveye tırman!-->
-<!--                                    </div>-->
-<!--                                    <div class="t182__buttons">-->
-<!--                                        <div class="t-btnwrapper t182__btnwrapper t-animate"-->
-<!--                                             data-animate-style="fadeinup" data-animate-group="yes"><a href="#contact" target=""-->
-<!--                                                                                                       class="t182__btn t-btn t-btn_md "-->
-<!--                                                                                                       style="color:#ffffff;background-color:#f5914f;border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;text-transform:uppercase;box-shadow:0px 0px 20px rgba(0,0,0,0.3);"-->
-<!--                                                                                                       data-buttonfieldset="button">-->
-<!--                                            <table role="presentation" style="width:100%; height:100%;">-->
-<!--                                                <tr>-->
-<!--                                                    <td data-field="buttontitle">Düzenlemek</td>-->
-<!--                                                </tr>-->
-<!--                                            </table>-->
-<!--                                        </a></div>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div> &lt;!&ndash; arrow &ndash;&gt;-->
-<!--            <div class="t-cover__arrow">-->
-<!--                <div class="t-cover__arrow-wrapper t-cover__arrow-wrapper_animated">-->
-<!--                    <div class="t-cover__arrow_mobile">-->
-<!--                        <svg role="presentation" class="t-cover__arrow-svg" style="fill:#ffffff;" x="0px" y="0px"-->
-<!--                             width="38.417px" height="18.592px" viewBox="0 0 38.417 18.592"-->
-<!--                             style="enable-background:new 0 0 38.417 18.592;">-->
-<!--                            <g>-->
-<!--                                <path d="M19.208,18.592c-0.241,0-0.483-0.087-0.673-0.261L0.327,1.74c-0.408-0.372-0.438-1.004-0.066-1.413c0.372-0.409,1.004-0.439,1.413-0.066L19.208,16.24L36.743,0.261c0.411-0.372,1.042-0.342,1.413,0.066c0.372,0.408,0.343,1.041-0.065,1.413L19.881,18.332C19.691,18.505,19.449,18.592,19.208,18.592z"/>-->
-<!--                            </g>-->
-<!--                        </svg>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div> &lt;!&ndash; arrow &ndash;&gt; </div>-->
-<!--    </div>-->
+    <div id="rec812146345" class="r t-rec" style="background-color:#da5e5e; " data-animationappear="off"
+         data-record-type="205" data-bg-color="#da5e5e"> <!-- cover -->
+        <div class="t-cover" id="recorddiv812146345" bgimgfield="img" style="height:500px;background-color: #da5e5e;">
+            <div class="t-cover__carrier" id="coverCarry812146345" data-content-cover-id="812146345"
+                 data-content-cover-bg="" data-display-changed="true" data-content-cover-height="30vh"
+                 data-content-cover-parallax="" data-content-use-image-for-mobile-cover=""
+                 style="height:500px;background-attachment:scroll; " itemscope itemtype="http://schema.org/ImageObject">
+                <meta itemprop="image" content="">
+            </div>
+            <div class="t-cover__filter" style="height:500px;background-color: unset;opacity: 0.4;"></div>
+            <div class="t-container">
+                <div class="t-width t-width_10" style="margin:0 auto;">
+                    <div class="t-cover__wrapper t-valign_middle" style="height:500px; position: relative;z-index:1;">
+                        <div class="t182">
+                            <div data-hook-content="covercontent">
+                                <div class="t182__wrapper">
+                                    <div class="t182__title t-title t-title_xl"
+                                         data-animate-group="yes" field="title">Volleyball Quest - En İyi <br/>Pin-Up
+                                        Deneyimi
+                                    </div>
+                                    <div class="t182__descr t-descr t-descr_lg"
+                                         data-animate-group="yes" field="descr">Pin-up tarzında yeni bir spor macerasına
+                                        adım at! Volleyball Quest ile eğlenceli, heyecan verici ve rekabet dolu bir
+                                        deneyim seni bekliyor. Takımını kur, becerilerini geliştir ve zirveye tırman!
+                                    </div>
+                                    <div class="t182__buttons">
+                                        <div class="t-btnwrapper t182__btnwrapper"
+                                             data-animate-group="yes"><a href="#contact" target=""
+                                                                                                       class="t182__btn t-btn t-btn_md "
+                                                                                                       style="color:#ffffff;background-color:#f5914f;border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px;text-transform:uppercase;box-shadow:0px 0px 20px rgba(0,0,0,0.3);"
+                                                                                                       data-buttonfieldset="button">
+                                            <table role="presentation" style="width:100%; height:100%;">
+                                                <tr>
+                                                    <td data-field="buttontitle">Düzenlemek</td>
+                                                </tr>
+                                            </table>
+                                        </a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> <!-- arrow -->
+            <div class="t-cover__arrow">
+                <div class="t-cover__arrow-wrapper t-cover__arrow-wrapper_animated">
+                    <div class="t-cover__arrow_mobile">
+                        <svg role="presentation" class="t-cover__arrow-svg" style="fill:#ffffff;" x="0px" y="0px"
+                             width="38.417px" height="18.592px" viewBox="0 0 38.417 18.592"
+                             style="enable-background:new 0 0 38.417 18.592;">
+                            <g>
+                                <path d="M19.208,18.592c-0.241,0-0.483-0.087-0.673-0.261L0.327,1.74c-0.408-0.372-0.438-1.004-0.066-1.413c0.372-0.409,1.004-0.439,1.413-0.066L19.208,16.24L36.743,0.261c0.411-0.372,1.042-0.342,1.413,0.066c0.372,0.408,0.343,1.041-0.065,1.413L19.881,18.332C19.691,18.505,19.449,18.592,19.208,18.592z"/>
+                            </g>
+                        </svg>
+                    </div>
+                </div>
+            </div> <!-- arrow --> </div>
+    </div>
     <div id="rec812146346" class="r t-rec t-rec_pt_180 t-rec_pb_180" style="padding-top:180px;padding-bottom:180px;width:100%;"
          data-record-type="486"> <!-- T486 -->
         <div class="t486" id="about">
